Fixed some text align on about page

--- a/assets/css/about.styl
+++ b/assets/css/about.styl
@@ -39,5 +39,8 @@ section
 .section-content
   text-align justify
 
+  .about-me &
+    text-align left
+
 .stack-items
   padding-left 20px
